Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138401

[REG dev] Windows11 Style: Check-boxes' drawing regression

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • None
    • 6.10
    • Widgets: Styles
    • Windows 11; Dark Mode; System scale: 125%
    • Windows
    • d48185433 (dev), 8455467c4 (6.10), 9fe2ea401 (6.9), 51403ef8b (tqtc/lts-6.8), 072bf40fe (dev), 51e180da6 (6.10), 4016fbb87 (6.9), 460d1efb5 (tqtc/lts-6.8)

      Steps to reproduce:

      1. Widget action in the menu:

      • run the attached "widget_action_menu" project
      • click on "Show menu" button
      • tick on the "cb1" check-box

      Expected result: "widget_action_menu-good.jpg"

      Actual result: "widget_action_menu-bad.jpg"

      FIXED!

       

      2. Checkbox inside of scroll area:

      int main(int argc, char* argv[])
      {
          QApplication app(argc, argv);
          QScrollArea sa;
          sa.setWidgetResizable(true);
          QWidget w;
          sa.setWidget(&w);
          auto lay1 = new QHBoxLayout(&w);
          QCheckBox cbx1("cbx1");
          cbx1.setChecked(true);
          lay1->addWidget(&cbx1);
          sa.show();
          return app.exec();
      }

        1. widget_action_menu.zip
          2 kB
          Nodir Temirkhodjaev
        2. widget_action_menu-bad.jpg
          6 kB
          Nodir Temirkhodjaev
        3. widget_action_menu-good.jpg
          6 kB
          Nodir Temirkhodjaev
        4. with_patch_qabstractscrollarea.png
          62 kB
          Wladimir Leuschner
        5. without_patch_qabstractscrollarea.png
          67 kB
          Wladimir Leuschner
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            nodir.temir Nodir Temirkhodjaev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: