Windows11Style: don't modify palette for QScrollBar/QMenu/QComboBox

Setting the background color to Qt::transparent is no longer needed and
just causes problems in other places.

Amends 2ec4da62b2020affc2687a2348470401fbd43bdb.

Fixes: QTBUG-138401
Task-number: QTBUG-138094
Change-Id: I4ccad488204d03c870dbb61386157aa130ca78b3
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit d48185433af1f69a388e28f0078224a82702be6c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 8455467c472ce9438c4baf0c8db8ea7b1c1d54d3)
(cherry picked from commit 9fe2ea40140c0383d9a40a710a4ff1b82e0a7d73)